1.0.0-RC5
- Small test utils improvements
- Refectored TypesafeConfigBuilder
- Refactored SharedSparkSession
- Move TypesafeConfigBuilder.getApplicationConfiguration to SparkApp
- Doc fix for trigger
- TODOs
- Added source configuration change methods: `addOptions` and `setSchema`
- Added sink configuration change method: `addOptions`
- Added tests for addOptions and small refactorings
- Building with JDK 17 targetting Java 8
- Added test java options to handle the JDK 17
- Build with Spark 3.2.x
- Removed the `spark-utils-io-pureconfig` module
- Added `StreamingTrigger.AvailableNow`
- Changed setSchema to withSchema